@@ -1,7 +1,7 @@
 //
 // Process_VMS.h
 //
-// $Id: //poco/1.4/Foundation/include/Poco/Process_VMS.h#1 $
+// $Id: //poco/1.4/Foundation/include/Poco/Process_VMS.h#2 $
 //
 // Library: Foundation
 // Package: Processes
@@ -76,6 +76,7 @@ public:
 	static void timesImpl(long& userTime, long& kernelTime);
 	static ProcessHandleImpl* launchImpl(const std::string& command, const ArgsImpl& args, Pipe* inPipe, Pipe* outPipe, Pipe* errPipe);		
 	static int waitImpl(PIDImpl pid);
+	static void killImpl(const ProcessHandleImpl& handle);
 	static void killImpl(PIDImpl pid);
 	static void requestTerminationImpl(PIDImpl pid);
 };
