@@ -1,7 +1,7 @@
 //
 // Process_UNIX.cpp
 //
-// $Id: //poco/1.4/Foundation/src/Process_UNIX.cpp#1 $
+// $Id: //poco/1.4/Foundation/src/Process_UNIX.cpp#2 $
 //
 // Library: Foundation
 // Package: Processes
@@ -166,6 +166,12 @@ ProcessHandleImpl* ProcessImpl::launchImpl(const std::string& command, const Arg
 	if (outPipe) outPipe->close(Pipe::CLOSE_WRITE);
 	if (errPipe) errPipe->close(Pipe::CLOSE_WRITE);
 	return new ProcessHandleImpl(pid);
+}
+
+
+void ProcessImpl::killImpl(const ProcessHandleImpl& handle)
+{
+	killImpl(handle.id());
 }
 
 
