@@ -1,7 +1,7 @@
 //
 // Process_WINCE.cpp
 //
-// $Id: //poco/1.4/Foundation/src/Process_WINCE.cpp#1 $
+// $Id: //poco/1.4/Foundation/src/Process_WINCE.cpp#2 $
 //
 // Library: Foundation
 // Package: Processes
@@ -64,6 +64,12 @@ ProcessHandleImpl::~ProcessHandleImpl()
 UInt32 ProcessHandleImpl::id() const
 {
 	return _pid;
+}
+
+
+HANDLE ProcessHandleImpl::process() const
+{
+	return _hProcess;
 }
 
 
@@ -149,6 +155,17 @@ ProcessHandleImpl* ProcessImpl::launchImpl(const std::string& command, const Arg
 		return new ProcessHandleImpl(processInfo.hProcess, processInfo.dwProcessId);
 	}
 	else throw SystemException("Cannot launch process", command);
+}
+
+
+void ProcessImpl::killImpl(const ProcessHandleImpl& handle)
+{
+	if (TerminateProcess(handle.process(), 0) == 0)
+	{
+		CloseHandle(handle.process());
+		throw SystemException("cannot kill process");
+	}
+	CloseHandle(handle.process());
 }
 
 
